--- a/client/src/styles/global.css
+++ b/client/src/styles/global.css
@@ -4,4 +4,12 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    font-family: 'Inter', sans-serif;;
+    color: white;
+}
+
+#root{
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
