--- a/client/src/components/notification_bar/NotificationBar.css
+++ b/client/src/components/notification_bar/NotificationBar.css
@@ -1,17 +1,21 @@
-.notification-container{
-    min-height: 22px;
-    width: 100%;
-    background-color: #ffffff33;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 9px 15px;
+.notification-container {
+	min-height: 22px;
+	width: 100%;
+	/* background-color: #0000002c; */
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	padding: 9px 20px;
+}
+.notification-container p {
+	font-size: 16px;
+	color: var(--color-black-white);
+	font-weight: 600;
+}
+.notification-container .mob-signal .not-icon {
+	padding: 0 4px;
+	/* color: blue;
+	fill: green;
+	background-color: red; */
+}
 
-}
-.notification-container p{
-    color: black;
-    font-weight: 600;
-}
-.notification-container .mob-signal img{
-    padding: 0 4px;
-}
