--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,8 +1,9 @@
 .app-container {
 	display: flex;
 	flex-direction: column;
-	align-items: center;
+	align-items: end;
 	justify-content: center;
+	padding-right: 10px;
 
 	width: 100%;
 	min-height: 100vh;
