--- a/client/src/components/buttons/Button.css
+++ b/client/src/components/buttons/Button.css
@@ -1,53 +1,55 @@
 /* Back Button */
-.back-btn-container{
-    width: 45px;
-    height: 45px;
-    border-radius: 50%;
-    background-color: var(--bg-color-ternary);
-    /* text-align: center; */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: rgb(254, 254, 254);;
+.back-btn-container {
+	width: 45px;
+	height: 45px;
+	border-radius: 50%;
+	background-color: var(--bg-color-ternary);
+	/* text-align: center; */
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	color: rgb(254, 254, 254);
 
-    margin-left: 20px;
-    margin-top: 5px;
+	margin-left: 20px;
+	margin-top: 5px;
+	
 }
 
-.back-btn-container:hover { 
-    filter: contrast(80%);
+.back-btn-container:hover {
+	filter: contrast(80%);
 }
 
 /* Account Button */
-.account-btn-container{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.account-btn-container {
+	display: flex;
+	justify-content: center;
+	/* align-items: center; */
 }
-.account-btn-container .account-btn{ 
-width: 335px;
-height: 50px;
-border-radius: 10px;
-border-style: none;
+.account-btn-container .account-btn {
+	width: 335px;
+	height: 50px;
+	border-radius: 10px;
+	border-style: none;
+	color: white;
 
-margin: 5px;
+	margin: 5px;
 }
 
 /* Large Button */
-.large-btn-container{
-background-color: var(--bg-color-secondary);
+.large-btn-container {
+	width: 100%;
+	background-color: transparent;
+	position: absolute;
+	bottom: 0;
 }
-.large-btn-container .large-btn{
-    width: 100%;
-    height: 75px;
-    background-color: #9775FA;
-    
-    font-weight: 500;
-    font-size: var(--body-b1);
-    border: none;
-}
-.account-btn-container .large-btn span{
-    background-clip: text;
-    color: transparent;
+.large-btn-container .large-btn {
+	width: 100%;
+	height: 75px;
+
+	background-color: #9775fa;
+	font-weight: 500;
+	font-size: var(--body-b1);
+	border: none;
+	color: var(--bg-color-secondary);
 
 }
