--- a/client/src/styles/global.css
+++ b/client/src/styles/global.css
@@ -5,11 +5,29 @@
     margin: 0;
     box-sizing: border-box;
     font-family: 'Inter', sans-serif;;
-    color: white;
+    /* color: var(--color-black-white); */
+    /* color: white; */
 }
 
 #root{
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: transparent;
+}
+button{
+    cursor: pointer;
+}
+
+/* --------------scrollbar styling----------------- */
+::-webkit-scrollbar{
+    width: 20px;
+}
+::-webkit-scrollbar-thumb{
+    
+    background-color: #9775FA;
+    border-radius: 10px;
+}
+::-webkit-scrollbar-track{
+    background-color:  rgb(211, 182, 146);
 }
