--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,7 +1,7 @@
 .app-container {
 	display: flex;
 	flex-direction: column;
-	align-items: end;
+	align-items: center;
 	justify-content: center;
 	padding-right: 10px;
 
