--- a/client/src/components/container/Container.css
+++ b/client/src/components/container/Container.css
@@ -3,9 +3,8 @@
     height: 812px;
     background-color: var(--bg-color-secondary);
     border-radius: 20px;
-    overflow: hidden;
     border: 1px solid rgba(61, 60, 60, 0.507);
 
+    overflow: auto;
     position: relative;
-    overflow-y: scroll;
 }
