--- a/client/src/pages/Home/Home.css
+++ b/client/src/pages/Home/Home.css
@@ -2,8 +2,15 @@
 	display: flex;
 	justify-content: space-between;
 }
+.tgl-btn {
+	position: absolute;
+	right:  -290px;
+	top: 30px;
+	scale: .67;
+}
 .home-container {
-	margin: 0 20px;
+	padding: 0 20px;
+	overflow-y: scroll;
 }
 .home-container span {
 	font-size: var(--body-b2);
@@ -55,16 +62,16 @@
 	margin-top: 25px;
 }
 .home-container .common-div .title {
-    display: flex;
+	display: flex;
 	justify-content: space-between;
-    margin-bottom: 10px;
+	margin-bottom: 10px;
 }
-.home-container .common-div .title h3{
-    font-weight: 600;
+.home-container .common-div .title h3 {
+	font-weight: 600;
 }
 .home-container .common-div .title p {
 	color: var(--text-color-secondary);
-    font-weight: 500;
+	font-weight: 500;
 }
 .home-container .common-div .content-container {
 	display: flex;
@@ -74,24 +81,24 @@
 	width: 115px;
 	height: 50px;
 	background-color: var(--bg-color-ternary);
-    font-size: var(--body-b2);
-    border-radius: 10px;
+	font-size: var(--body-b2);
+	border-radius: 10px;
 	display: flex;
 	justify-content: center;
 	align-items: center;
 }
-.home-container .common-div .content-container .content h4{
-    font-weight: 500;
+.home-container .common-div .content-container .content h4 {
+	font-weight: 500;
 }
 
 /* ----------New Arraival---------- */
 .home-container .new-arraival {
-    margin-top: 15px;
+	margin-top: 15px;
 }
-.home-container .new-arraival h3{
+.home-container .new-arraival h3 {
 	margin-bottom: 5px;
 }
-.new-arraival .card-container{
+.new-arraival .card-container {
 	/* display: flex;
 	gap: 10px;
 	flex-wrap: wrap; */
@@ -102,23 +109,22 @@
 	/* grid-template-rows: 260px; */
 	grid-auto-rows: 260px;
 }
-.new-arraival .card-container .card{
+.new-arraival .card-container .card {
 	position: relative;
 	display: flex;
 	flex-direction: column;
 	align-items: start;
 	overflow: hidden;
 }
-.card-container .card .product-img{
-	background-color: #F3F3F3;
+.card-container .card .product-img {
+	background-color: #f3f3f3;
 	border-radius: 15px;
 	width: 160px;
 	height: 203px;
 	object-fit: cover;
 	overflow: hidden;
-
 }
-.card-container .card .fa-heart{
+.card-container .card .fa-heart {
 	position: absolute;
 	right: 12px;
 	top: 15px;
@@ -129,10 +135,10 @@
 	color: red;
 	/* scale: 1.5; */
 }
-.card-container .card .item{
+.card-container .card .item {
 	font-weight: 500;
 }
-.card-container .card .price{ 
+.card-container .card .price {
 	font-weight: 600;
 	margin: 0;
 }
