--- a/client/src/styles/global.css
+++ b/client/src/styles/global.css
@@ -22,9 +22,9 @@
     background-color: #9775FA;
     border-radius: 10px;
 }
-::-webkit-scrollbar-track{
+/* ::-webkit-scrollbar-track{
     background-color:  rgb(211, 182, 146);
-}
+} */
 
 /* --------------Button----------------- */
 button{
