--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,5 +1,5 @@
 .app-container {
-	display: flex;
+  /* display: flex;
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
@@ -7,5 +7,5 @@
 
 	width: 100%;
 	min-height: 100vh;
-	background-color: rgb(211, 182, 146);
+	background-color: rgb(211, 182, 146); */
 }
