--- a/client/src/components/container/Container.css
+++ b/client/src/components/container/Container.css
@@ -1,10 +1,12 @@
-#global-container{
-    width: 375px;
-    height: 812px;
-    background-color: var(--bg-color-secondary);
-    border-radius: 20px;
-    border: 1px solid rgba(61, 60, 60, 0.507);
+#global-container {
+  /* width: 375px; */
+  width: 100vw;
+  /* height: 812px; */
+  height: 100vh;
+  background-color: var(--bg-color-secondary);
+  /* border-radius: 20px; */
+  border: 1px solid rgba(61, 60, 60, 0.507);
 
-    overflow: auto;
-    position: relative;
+  overflow: auto;
+  position: relative;
 }
