--- a/client/src/styles/global.css
+++ b/client/src/styles/global.css
@@ -1,50 +1,50 @@
-@import url('./variable.css');
+@import url("./variable.css");
 
-*{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    font-family: 'Inter', sans-serif;;
-    color: var(--text-color-primary);
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: "Inter", sans-serif;
+  color: var(--text-color-primary);
 }
-#root{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: transparent;
+#root {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: transparent;
 }
 /* --------------scrollbar styling----------------- */
-::-webkit-scrollbar{
-    width: 8px;
+::-webkit-scrollbar {
+  width: 0px;
 }
-::-webkit-scrollbar-thumb{
-    
-    background-color: #9775FA;
-    border-radius: 10px;
+/* ::-webkit-scrollbar-thumb {
+  background-color: #9775fa;
+  border-radius: 10px;
 }
-/* ::-webkit-scrollbar-track{
-    background-color:  rgb(211, 182, 146);
+::-webkit-scrollbar-track {
+  background-color: rgb(211, 182, 146);
 } */
 
 /* --------------Button----------------- */
-button{
-    cursor: pointer;
-    outline: none;
+button {
+  cursor: pointer;
+  outline: none;
 }
-button:focus,button:hover {
-    filter: brightness(93%);
+button:focus,
+button:hover {
+  filter: brightness(93%);
 }
 
 /* ---------font size------------- */
-.b1{
-    font-size:17px ;
+.b1 {
+  font-size: 17px;
 }
-.b2{
-    font-size:15px ;
+.b2 {
+  font-size: 15px;
 }
-.b3{
-    font-size:13px ;
+.b3 {
+  font-size: 13px;
 }
-.b4{
-    font-size:11px ;
+.b4 {
+  font-size: 11px;
 }
