--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,11 +1,11 @@
 .app-container {
-  /* display: flex;
+  display: flex;
 	flex-direction: column;
-	align-items: center;
+	align-items: end;
 	justify-content: center;
 	padding-right: 10px;
 
 	width: 100%;
 	min-height: 100vh;
-	background-color: rgb(211, 182, 146); */
+	background-color: rgb(36, 55, 56);
 }
