--- a/client/src/styles/global.css
+++ b/client/src/styles/global.css
@@ -15,13 +15,13 @@
 }
 /* --------------scrollbar styling----------------- */
 ::-webkit-scrollbar {
-  width: 0px;
+  width:8px;
 }
-/* ::-webkit-scrollbar-thumb {
-  background-color: #9775fa;
+::-webkit-scrollbar-thumb {
+  background-color: #9675fa;
   border-radius: 10px;
 }
-::-webkit-scrollbar-track {
+/* ::-webkit-scrollbar-track {
   background-color: rgb(211, 182, 146);
 } */
 
