--- a/client/src/pages/Home/Home.css
+++ b/client/src/pages/Home/Home.css
@@ -1,152 +1,167 @@
 .float-btn-top {
-  display: flex;
-  justify-content: space-between;
+	display: flex;
+	justify-content: space-between;
 }
 .tgl-btn {
-  position: absolute;
-  right: -290px;
-  top: 30px;
-  scale: 0.67;
+	position: absolute;
+	right: -290px;
+	top: 30px;
+	scale: 0.67;
 }
 .home-container {
-  padding: 0 20px;
-  overflow-y: scroll;
+	padding: 0 20px;
+	overflow-y: scroll;
 }
 .home-container span {
-  font-size: var(--body-b2);
-  color: var(--text-color-secondary);
-  font-weight: 400;
+	font-size: var(--body-b2);
+	color: var(--text-color-secondary);
+	font-weight: 400;
 }
 .home-container > h2 {
-  margin-top: 30px;
-  color: var(--text-color-primary);
-  font-size: var(--headline-h2);
-  font-weight: 800;
+	margin-top: 30px;
+	color: var(--text-color-primary);
+	font-size: var(--headline-h2);
+	font-weight: 800;
 }
 
 /* -------Search bar------- */
 .home-container .search-bar {
-  margin-top: 20px;
-  display: flex;
-  align-items: center;
-  gap: 10px;
-  position: relative;
+	margin-top: 20px;
+	display: flex;
+	align-items: center;
+	gap: 10px;
+	position: relative;
 }
 .home-container .search-bar .search-icon {
-  position: absolute;
-  left: 15px;
+	position: absolute;
+	left: 15px;
 }
 
 .home-container .search-bar .search-input {
-  border: none;
-  width: max(275px, 74vw);
-  height: 50px;
-  padding: 15px;
-  padding-left: 45px;
-  font-size: var(--body-b2);
-  color: var(--text-color-secondary);
-  background-color: var(--bg-color-ternary);
-  border-radius: 10px;
-  outline: none;
+	border: none;
+	width: max(275px, 74vw);
+	height: 50px;
+	padding: 15px;
+	padding-left: 45px;
+	font-size: var(--body-b2);
+	color: var(--text-color-secondary);
+	background-color: var(--bg-color-ternary);
+	border-radius: 10px;
+	outline: none;
 }
 .home-container .search-bar .voice-btn {
-  width: max(50px, 13vw);
-  height: 50px;
-  border-radius: 10px;
-  background-color: #9775fa;
-  border: none;
+	width: max(50px, 13vw);
+	height: 50px;
+	border-radius: 10px;
+	background-color: #9775fa;
+	border: none;
 }
 
 /* -------brand--------- */
 .home-container .choose-brand {
-  margin-top: 25px;
+	margin-top: 25px;
 }
 .home-container .common-div .title {
-  display: flex;
-  justify-content: space-between;
-  margin-bottom: 10px;
+	display: flex;
+	justify-content: space-between;
+	margin-bottom: 10px;
 }
 .home-container .common-div .title h3 {
-  font-weight: 600;
+	font-weight: 600;
 }
 .home-container .common-div .title p {
-  color: var(--text-color-secondary);
-  font-weight: 500;
+	color: var(--text-color-secondary);
+	font-weight: 500;
 }
 .home-container .common-div .content-container {
-  display: flex;
-  gap: 10px;
+	display: flex;
+	gap: 10px;
 }
 .home-container .common-div .content-container .content {
-  width: 115px;
-  height: 50px;
-  background-color: var(--bg-color-ternary);
-  font-size: var(--body-b2);
-  border-radius: 10px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+	width: 115px;
+	height: 50px;
+	background-color: var(--bg-color-ternary);
+	font-size: var(--body-b2);
+	border-radius: 10px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 .home-container .common-div .content-container .content h4 {
-  font-weight: 500;
+	font-weight: 500;
 }
 
 /* ----------New Arraival---------- */
 .home-container .new-arraival {
-  margin-top: 15px;
+	margin-top: 15px;
 }
 .home-container .new-arraival h3 {
-  margin-bottom: 5px;
+	margin-bottom: 5px;
 }
 .new-arraival .card-container {
-  /* background-color: rgb(71, 109, 190); */
+	/* background-color: rgb(71, 109, 190); */
 
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-gap: 5px;
-  /* grid-template-rows: 260px; */
-  grid-auto-rows: 260px;
-  place-items: center;
-  overflow: hidden;
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	grid-gap: 5px;
+	/* grid-template-rows: 260px; */
+	/* grid-auto-rows: max-contents ; */
+	/* place-items: center; */
+	overflow: hidden;
 }
 .new-arraival .card-container .card {
-  /* width: max-content; */
-  /* background-color: rgba(128, 255, 0, 0.329); */
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  align-items: start;
-  overflow: hidden;
+	margin: 0 auto;
+  margin-bottom: 8px;
+	max-width: 160px;
+	/* background-color: rgba(128, 255, 0, 0.329); */
+	position: relative;
+	display: flex;
+	flex-direction: column;
+	align-items: start;
+	overflow: hidden;
 }
-.card-container .card .product-img {
-  background-color: #f3f3f3;
-  border-radius: 15px;
-  width: 160px;
-  height: 203px;
-  object-fit: cover;
-  overflow: hidden;
+.card-container .card .img-container {
+	/* width: min-content; */
+	overflow: hidden;
+	border-radius: 15px;
+}
+.card-container .card .img-container .product-img {
+	background-color: #f3f3f3;
+	width: 160px;
+	height: 203px;
+	/* object-fit: contain; */
+	/* overflow: hidden; */
+	transition: 0.4s ease-in-out; 
+}
+.card-container .card .product-img:hover {
+	scale: 1.03;
 }
 .card-container .card .fa-heart {
-  position: absolute;
-  right: 12px;
-  top: 15px;
-  color: var(--text-color-secondary);
-  transition: 0.1s ease-in;
+	position: absolute;
+	right: 12px;
+	top: 15px;
+	color: var(--text-color-secondary);
+	transition: 0.3s ease-in;
+	z-index: 5;
 }
 .card-container .card .fa-heart:hover {
-  /* background-color: red; */
-  scale: 1.1;
+	scale: 1.1;
 }
-.card-container .card .item {
-  font-weight: 600;
-  /* color: black; */
+.card-container .card .text-container {
+	/* margin-top: 2px; */
+	margin-left:5px;
 }
-.card-container .card .title {
-  font-weight: 400;
-  
-  /* color: black; */
+.card-container .card .text-container .brand {
+	font-weight: 600;
 }
-.card-container .card .price {
-  font-weight: 600;
-  margin: 0;
+.card-container .card .text-container .title {
+	white-space: nowrap;
+	overflow: hidden;
+	font-weight: 400;
+	text-overflow: ellipsis;
+	margin: 2px 0px;
+}
+.card-container .card .text-container .price {
+	/* line-height: 5px; */
+	font-weight: 600;
 }
