--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,5 +1,5 @@
 .app-container {
-  display: flex;
+  /* display: flex;
 	flex-direction: column;
 	align-items: end;
 	justify-content: center;
@@ -7,5 +7,5 @@
 
 	width: 100%;
 	min-height: 100vh;
-	background-color: rgb(36, 55, 56);
+	background-color: rgb(36, 55, 56); */
 }
