--- a/client/src/pages/Home/Home.css
+++ b/client/src/pages/Home/Home.css
@@ -43,7 +43,9 @@
 	height: 50px;
 	padding: 15px;
 	padding-left: 45px;
+	font-family: Arial, Helvetica, sans-serif;
 	font-size: var(--body-b2);
+	font-weight: 600;
 	color: var(--text-color-secondary);
 	background-color: var(--bg-color-ternary);
 	border-radius: 10px;
