--- a/client/src/pages/Intro/Intro.css
+++ b/client/src/pages/Intro/Intro.css
@@ -32,6 +32,8 @@
   /* fill: white !important; */
   overflow: hidden;
   scale: 0.85;
+  margin-left: auto;
+  margin-right: 40px;
 }
 .fa-moon,
 .fa-sun {
