--- a/client/src/styles/global.css
+++ b/client/src/styles/global.css
@@ -15,12 +15,12 @@
 }
 /* --------------scrollbar styling----------------- */
 ::-webkit-scrollbar {
-  width:8px;
+  width:0px;
 }
-::-webkit-scrollbar-thumb {
+/* ::-webkit-scrollbar-thumb {
   background-color: #9675fa;
   border-radius: 10px;
-}
+} */
 /* ::-webkit-scrollbar-track {
   background-color: rgb(211, 182, 146);
 } */
