--- a/client/src/pages/Intro/Intro.css
+++ b/client/src/pages/Intro/Intro.css
@@ -1,46 +1,83 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Sacramento&display=swap");
 .intro-container {
-  /* width: 100vw;
+	/* width: 100vw;
   height: 100vh; */
-  width: min(400px, 100vw);
-  height: min(812px, 100vh);
+	width: min(400px, 100vw);
+	height: min(812px, 100vh);
 
-  /* background-color: var(--bg-color-primary); */
-  /* border-radius: 20px; */
-  overflow: hidden;
-  border: 1px solid rgba(61, 60, 60, 0.507);
-  background-color: var(--bg-color-primary);
-  text-align: center;
-  position: relative;
+	/* background-color: var(--bg-color-primary); */
+	/* border-radius: 20px; */
+	overflow: hidden;
+	border: 1px solid rgba(61, 60, 60, 0.507);
+	background-color: var(--bg-color-primary);
+	/* background-color: #1b262c; */
+
+	text-align: center;
+	position: relative;
 }
 .intro-container .UpTrend {
-  padding-top: 145px;
+	padding-top: 145px;
+}
+.intro-container .logo {
+	animation: bounce .5s ease-in-out;
+	animation-delay: 1500ms;
+	animation-iteration-count: 1;
+animation-fill-mode: forwards;
+}
+@keyframes bounce {
+	0% {
+		scale: 1;
+	}
+	/* 50% {
+		scale: 1.1;
+	} */
+	100% {
+		scale: 1.1;
+	}
 }
 .intro-container .UpTrend h1 {
-  font-size: 50px;
-  font-weight: 600;
-  color: white;
+	font-size: 50px;
+	font-weight: 600;
+	color: white;
 }
 .intro-container .UpTrend h2 {
-  font-family: "Sacramento";
-  font-size: 40px;
-  font-weight: 400;
-  color: white;
-  margin-bottom: 50px;
+	font-family: "Sacramento";
+	font-size: 40px;
+	font-weight: 400;
+	color: white;
+	margin-bottom: 50px;
 }
 .toggle-switch {
-  /* fill: white !important; */
-  overflow: hidden;
-  scale: 0.85;
-  margin-left: auto;
-  margin-right: 40px;
+	/* fill: white !important; */
+	overflow: hidden;
+	scale: 0.85;
+	margin-left: auto;
+	margin-right: 40px;
 }
 .fa-moon,
 .fa-sun {
-  margin: 25% 30%;
-  /* scale: 1.1; */
+	margin: 25% 30%;
+	/* scale: 1.1; */
 }
 
 #back-btn {
-  display: none;
+	display: none;
+}
+
+/*======= breakpoint1======== */
+@media (min-width: 500px) {
+	.intro-container {
+		width: 100vw;
+		/* height: 100vh; */
+
+		/* background-color: #9b4444; */
+		.UpTrend h1 {
+			margin-top: 20px;
+			font-size: 56px;
+		}
+    .UpTrend h2{
+      margin-top: 10px;
+      font-size:48px;
+    }
+	}
 }
