--- a/client/src/styles/global.css
+++ b/client/src/styles/global.css
@@ -15,12 +15,13 @@
 }
 /* --------------scrollbar styling----------------- */
 ::-webkit-scrollbar {
-  width:0px;
+  width:10px;
+  height: 0px;
 }
-/* ::-webkit-scrollbar-thumb {
-  background-color: #9675fa;
+::-webkit-scrollbar-thumb {
+  background-color: rgba(150, 117, 250, 0.3);
   border-radius: 10px;
-} */
+} 
 /* ::-webkit-scrollbar-track {
   background-color: rgb(211, 182, 146);
 } */
