--- a/client/src/components/buttons/Button.scss
+++ b/client/src/components/buttons/Button.scss
@@ -4,6 +4,7 @@
 	height: 45px;
 	border-radius: 50%;
 	background-color: var(--bg-color-ternary);
+	
 	/* text-align: center; */
 	display: flex;
 	justify-content: center;
@@ -58,16 +59,27 @@
 	width: 100%;
 
 	.cart-btn {
+		margin: 5px 0;
 		padding: 5px 0;
 		width: 100%;
 		height: 45px;
 		font-weight: 600;
-		background-color: var(--color-black-white);
-		filter: contrast(70%);
+		font-size: 16px;
+		border: none;
+		border-radius: 10px;
+		background-color: rgba(150, 117, 250, 0.849);
 		color: var(--bg-color-ternary);
 
-		&:hover{
+		display: flex;
+		align-items: center;
+		justify-content: space-around;
+
+		&:hover {
 			filter: contrast(80%);
+		}
+
+		i {
+			// scale: 1.3;
 		}
 	}
 }
@@ -105,7 +117,6 @@
 
 	/* cart btn */
 	.cart-btn-container {
-
 		.cart-btn {
 			padding: 5px 0;
 			width: 220px;
