--- a/client/src/components/container/Container.css
+++ b/client/src/components/container/Container.css
@@ -1,4 +1,5 @@
 #global-container {
+  margin: 0;
   /* width: 375px; */
   /* height: 812px; */
   width: min(400px, 100vw);
@@ -6,7 +7,7 @@
   height: min(812px, 100vh);
   background-color: var(--bg-color-secondary);
   /* border-radius: 20px; */
-  border: 1px solid rgba(61, 60, 60, 0.507);
+  /* border: 1px solid rgba(61, 60, 60, 0.507); */
 
   overflow-y: auto ;
   overflow-x: hidden ;
