--- a/client/src/pages/ProductDetails/ProductDetails.scss
+++ b/client/src/pages/ProductDetails/ProductDetails.scss
@@ -56,7 +56,7 @@
 
 				img{
 					height: fit-content;
-					width: 140px;
+					width: 90px;
 				}
 			}
 
@@ -95,8 +95,8 @@
 				align-items: center;
 			}
 			.count-selector .count-btn {
-				width: 20px;
-				height: 20px;
+				width: 24px;
+				height: 24px;
 				display: flex;
 				justify-content: center;
 				align-items: center;
@@ -111,6 +111,7 @@
 				width: 25px;
 				text-align: center;
 				font-weight: 500;
+				margin: 0 5px;
 			}
 		}
 	}
