--- a/client/src/components/header/Header.scss
+++ b/client/src/components/header/Header.scss
@@ -1,92 +1,78 @@
-.header-container{
-    position: sticky;
-    z-index: 5;
-    top: 0;
-    // position: relative;
-    width: 100vw;
-    height: 80px;
-    background-color: #9775FA;
-    // background-color: var(--bg-color-secondary);
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 0 30px;
-    box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.52);
-    
-    .menu{
-        // filter: invert(50%);
-        // position: absolute;
-        // left: 5px;
+.menu {
+	position: fixed;
+	top: 40px;
+	left: 30px;
+	translate: -50% -50%;
 
-        padding: 7px;
-        border-radius: 50%;
-        background-color: rgba(255, 255, 255, 0.162);
+	z-index: 8;
+	border: none;
+	border-radius: 50%;
+	background-color: rgba(255, 255, 255, 0.2);
+	overflow: hidden;
 
-        &:hover{
-
-            // rotate: 90deg;
-            transition: .5s ;
-            // animation-timing-function:  ease-out;
-            // animation: name duration timing-function delay iteration-count direction fill-mode;
-        }
-    }
-
-    .logo{
-
-        // width: 140px;
-        height: 70%;
-        display: flex;
-        align-items: center;
-        overflow: hidden;
-        
-        img{
-            height: 100%;
-        }
-        span{
-            display: none;
-            margin-top: auto;
-            margin-bottom: 5px;
-            color: white;
-            color:#9775FA ;
-            font-size: var(--headline-h3);
-            font-weight: 700;
-        }
-    }
-    .nav{
-
-        display: flex;
-        gap: 20px;
-        
-        p{
-            font-size: small;
-            font-weight: 600;
-            color: var(--bg-color-secondary);
-            color: var(--bg-color-ternary);
-        }
-    }
-
-
+	img {
+		padding: 7px;
+	}
 
 }
 
+.header-container {
+	position: sticky;
+	z-index: 7;
+	top: 0;
+	// position: relative;
+	width: 100vw;
+	height: 80px;
+	background-color: #9775fa;
+	// background-color: var(--bg-color-secondary);
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.52);
 
-@media (min-width: 500px){
+	.logo {
+		padding-left: 70px;
+		height: 70%;
+		display: flex;
+		align-items: center;
 
-.header-container{
+		img {
+			height: 100%;
+		}
+	}
+	h2 {
+		// display: none;
+		// margin-top: auto;
+		// margin-bottom: 15px;
+		color: white;
+		// color:#9775FA ;
+		font-size: var(--headline-h3);
+		font-weight: 700;
+	}
+	.nav {
+		padding-right: 30px;
+		display: flex;
+		gap: 20px;
 
-.menu{
-
+		p {
+			font-size: small;
+			font-weight: 600;
+			color: var(--bg-color-secondary);
+			color: var(--bg-color-ternary);
+		}
+	}
 }
 
-.logo{
+@media (min-width: 500px) {
+	.header-container {
+		.menu {
+		}
 
-}
+		.logo {
+		}
 
-.nav{
-
-    gap: 50px;
-}
-
-}
-
+		.nav {
+			gap: 50px;
+		}
+	}
 }
