ui update #4 voice input added

--- a/client/src/components/header/Header.scss
+++ b/client/src/components/header/Header.scss
@@ -1,17 +1,20 @@
-.menu {
+#menu-icon {
 	position: fixed;
 	top: 40px;
 	left: 30px;
 	translate: -50% -50%;
+    width: 40px;
+    height: 40px;
 
 	z-index: 8;
 	border: none;
 	border-radius: 50%;
 	background-color: rgba(255, 255, 255, 0.2);
 	overflow: hidden;
+    transition: .25s ;
 
 	img {
-		padding: 7px;
+		// padding: 7px;
 	}
 
 }
@@ -28,7 +31,7 @@
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
-	box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.52);
+	box-shadow: 0px 5px 10px 0px var(--shadow-color);
 
 	.logo {
 		padding-left: 70px;
