--- a/client/src/styles/variable.css
+++ b/client/src/styles/variable.css
@@ -20,23 +20,26 @@
 	--bg-color-primary:#9775FA;
     --bg-color-secondary:#ffffff;
     --bg-color-ternary:#F5F6FA;
-    --text-color-primary:#1D1E20;
+    --text-color-primary:rgba(29, 30, 32, .8);
     --text-color-secondary:#8F959E;
     --color-black-white: black;
 
-
-
+    --shadow-color: rgba(0, 0, 0, 0.4);
+    
+    
     --svg-color:invert(0%);
-
+    
 }
 
 :root #dark{
     --bg-color-primary:#1B262C;
     --bg-color-secondary:#1B262C;
     --bg-color-ternary:#222E34;
-    --text-color-primary:#FFF;
+    --text-color-primary:rgba(255, 255, 255,.8);
     --text-color-secondary:#8F959E;
     --color-black-white: white;
+    
+    --shadow-color: rgba(180, 180, 180, 0.2);
 
     --svg-color:invert(100%);
 }
