--- a/client/src/components/buttons/Button.scss
+++ b/client/src/components/buttons/Button.scss
@@ -84,7 +84,58 @@
 	}
 }
 
-//==== break-point1 =========
+.audio-search-btn-container{
+	width: max(50px, 15%);
+	// width:100%;
+	.voice-btn {
+		width: 100%;
+		height: 50px;
+		border-radius: 10px;
+		background-color: #9775fa;
+		border: none;
+		overflow: hidden;
+		position: relative;
+		
+		img{
+			filter: var(--svg-color);
+		}
+	}
+	// .voice-btn-animation {
+	// 	// background-color: red;
+	// }
+	// .voice-btn-animation::after {
+	// 	position: absolute;
+	// 	left: 0;
+	// 	top: 0;
+	// 	background: linear-gradient(45deg, rgba(255, 255, 255, 0.3),  rgba(255, 255, 255, 0.1));
+
+	// 	content: " ";
+	// 	// width: 100%;
+	// 	height: 100%;
+	// 	animation: searching 2s;
+	// 	animation-timing-function: ease-in-out;
+	// 	animation-iteration-count: infinite;
+	// }
+	// @keyframes searching {
+	// 	0% {
+	// 		width: 0%;
+	// 		// translate: 0 20px;
+	// 	}
+	// 	50% {
+	// 		// translate: 0 0px;
+	// 		width: 50%;
+	// 	}
+	// 	100% {
+	// 		width: 100%;
+	// 		// translate: 0 20px;
+	// 	}
+	// }
+
+
+}
+
+
+//===================== break-point1 ============================
 @media (min-width: 500px) {
 	.large-btn-container {
 		width: 35%;
