--- a/client/src/pages/Home/Home.scss
+++ b/client/src/pages/Home/Home.scss
@@ -34,73 +34,14 @@
 		z-index: 4;
 		padding: 20px 0;
 		background-color: var(--bg-color-secondary);
-		// width: fit-content;
-		// padding-left: 5%;
 		width: 100vw;
 		display: flex;
 		align-items: center;
 		gap: 10px;
+		// box-shadow: 0px 15px 10px 0px rgba(0, 0, 0, 0.068);
 		// position: relative;
 
-		.search-icon {
-			position: absolute;
-			margin-left: 15px;
-			// left: 15px;
-		}
 
-		.search-input {
-			border: none;
-			width: max(275px, 74%);
-			height: 50px;
-			padding: 15px;
-			padding-left: 45px;
-			font-family: Arial, Helvetica, sans-serif;
-			font-size: var(--body-b2);
-			font-weight: 600;
-			color: var(--text-color-secondary);
-			background-color: var(--bg-color-ternary);
-			border-radius: 10px;
-			outline: none;
-		}
-		.voice-btn {
-			width: max(50px, 13%);
-			height: 50px;
-			border-radius: 10px;
-			background-color: #9775fa;
-			border: none;
-			overflow: hidden;
-			position: relative;
-		}
-		.voice-btn-animation {
-			// background-color: red;
-		}
-		.voice-btn-animation::after {
-			position: absolute;
-			left: 0;
-			top: 0;
-			background: linear-gradient(45deg, rgba(255, 255, 255, 0.3),  rgba(255, 255, 255, 0.1));
-
-			content: " ";
-			// width: 100%;
-			height: 100%;
-			animation: searching 2s;
-			animation-timing-function: ease-in-out;
-			animation-iteration-count: infinite;
-		}
-		@keyframes searching {
-			0% {
-				width: 0%;
-				// translate: 0 20px;
-			}
-			50% {
-				// translate: 0 0px;
-				width: 50%;
-			}
-			100% {
-				width: 100%;
-				// translate: 0 20px;
-			}
-		}
 	}
 
 	/* -------brand--------- */
@@ -167,10 +108,24 @@
 	.home-container {
 		.new-arraival {
 			.card-container {
-				grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-				// grid-template-columns: repeat(auto-fit ,  200px);
-				grid-gap: 50px;
-				place-content: center;
+				grid-template-columns: 1fr 1fr 1fr;
+				// grid-template-columns: repeat(auto-fit ,  180px);
+				grid-gap: 40px;
+				// place-content: center;
+			}
+		}
+	}
+}
+
+
+@media (min-width: 850px) {
+	.home-container {
+		.new-arraival {
+			.card-container {
+				grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+				// grid-template-columns: repeat(auto-fit ,  180px);
+				grid-gap: 40px;
+				// place-content: center;
 			}
 		}
 	}
