--- a/client/src/pages/cart/Cart.scss
+++ b/client/src/pages/cart/Cart.scss
@@ -3,7 +3,6 @@
     height: 100%;
     text-align: center;
 
-    
-    background-color: rgba(255, 255, 0, 0.5);
+    background-color: rgb(117, 117, 37);
     padding: 50px 20px;
 }
