--- a/client/src/pages/wishlist/Wishlist.scss
+++ b/client/src/pages/wishlist/Wishlist.scss
@@ -1,7 +1,19 @@
 .wishlist-container{
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    min-height: 80vh;
     text-align: center;
-    background-color: rgba(255, 0, 0, 0.3);
-    padding: 50px 20px
+    background-color: rgba(151, 149, 149, 0.3);
+    // background-repeat: no-repeat;
+    // background-size: contain;
+    // backdrop-filter: blur(20px);
+    
+    h1{
+        padding: 30px ;
+
+    }
+
+    img{
+        width: 35%;
+        // height: 40%;
+    }
 }
